# transparency-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dsa_guide.md  metric_taxonomy.md
examples/: custom_framework.py  generate_dsa_report.py
examples/sample_data/: sample_metrics.csv
tests/: conftest.py  test_frameworks.py  test_ingestion.py  test_metrics.py  test_reports.py  test_validation.py
transparency_engine/: __init__.py  cli.py  config.py
transparency_engine/frameworks/: __init__.py  appi.py  base.py  custom.py  dsa.py  lgpd.py  osa.py
transparency_engine/ingestion/: __init__.py  loaders.py  schema.py  transforms.py
transparency_engine/metrics/: __init__.py  mapping.py  taxonomy.py  versioning.py
transparency_engine/reports/: __init__.py  generator.py  visualizations.py
transparency_engine/reports/templates/: appi_report.html  dsa_report.html  osa_report.html
transparency_engine/validation/: __init__.py  audit.py  checks.py
